--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 .embed-container { 
     position: relative;
-    padding-bottom: 56.25%;
+    /* padding-bottom: 56.25%; */
     height: 100vh; 
     overflow: hidden; 
     max-width: 100%; 
@@ -10,5 +10,6 @@
      top: 0; 
      left: 0; 
      width: 100%; 
-     height: 80%; 
+     height: 100%; 
+     max-height: 100vh;
 }
