--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,18 +55,23 @@ iframe用
 .header.scrolled {
 	top: 0;
 }
-
 /*********************************
 2.2 Header Content
 *********************************/
 
 .header_container {
 	width: 100%;
-	background: #FFFFFF;
+}
+.bg-header{
+	background-image: url('../images/header.png');
+	background-size: 96%;
+	background-position: 50% 0;
+	background-repeat: no-repeat;
+
 }
 
 .header_content {
-	height: 44px;
+	height: 50px;
 	-webkit-transition: all 200ms ease;
 	-moz-transition: all 200ms ease;
 	-ms-transition: all 200ms ease;
