--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,96 @@
 html,
 body {
 	max-height: 100vh;
+	/* overflow-y: hidden; */
 }
-
+.text-orange{
+	color: #fbceac;
+}
+.kw-height{
+	height:60px;
+}
+.bg-header >.d-flex{
+	padding-bottom:8px;
+}
+.img-size{
+	width: 24px;
+}
+.img-size-chacter{
+	width:20px;
+}
+/* i6 */
+@media (min-width: 667px) {
+	.kw-height{
+		height:70px;
+	}
+	.img-size{
+		width: 24px;
+	}
+	.bg-header >.d-flex{
+		padding-bottom:0px;
+	}
+	
+}
+/* i7+ */
+@media (min-width: 736px) {
+	.kw-height{
+		height:76px;
+	}
+	.bg-header >.d-flex{
+		padding-top:4px;
+	}
+}
+/* ix */
+@media (min-width: 812px) {
+	.kw-height{
+		height:90px;
+	}
+	.bg-header >.d-flex{
+		padding-top:10px;
+	}
+	.img-size{
+		width: 28px;
+	}
+	.img-size-chacter{
+		width:24px;
+	}
+}
+/* ipad */
+@media (min-width: 1024px) {
+	.kw-height{
+		height:106px;
+	}
+	.bg-header >.d-flex{
+		padding-top:26px;
+	}
+	.title-font{
+		font-size:20px;
+	}
+	.img-size{
+		width: 32px;
+	}
+	.img-size-chacter{
+		width:28px;
+	}
+}
+/* ipad pro */
+@media (min-width: 1366px) {
+	.kw-height{
+		height:144px;
+	}
+	.bg-header >.d-flex{
+		padding-top:48px;
+	}
+	.title-font{
+		font-size:24px;
+	}
+	.img-size{
+		width: 36px;
+	}
+	.img-size-chacter{
+		width:32px;
+	}
+}
 /****************************
 iframe用
 ****************************/
@@ -64,7 +152,7 @@ iframe用
 }
 .bg-header{
 	background-image: url('../images/header.png');
-	background-size: 96%;
+	background-size: 100%;
 	background-position: 50% 0;
 	background-repeat: no-repeat;
 
@@ -87,10 +175,10 @@ iframe用
 3. Main Nav
 *********************************/
 
-.main_nav,
+/* .main_nav,
 .user {
 	display: inline-block;
-}
+} */
 
 .main_nav li {
 	display: inline-block;
