--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,7 @@ iframe用
 	left: 0;
 	width: 100%;
 	z-index: 100;
-	box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+	/* box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1); */
 	-webkit-transition: all 200ms ease;
 	-moz-transition: all 200ms ease;
 	-ms-transition: all 200ms ease;
@@ -233,13 +233,13 @@ iframe用
 	position: fixed;
 	top: 0;
 	right: -400px;
-	width: 400px;
+	width: 250px;
 	height: 100vh;
-	background: #FFFFFF;
+	background: rgb(19, 6, 6);
 	z-index: 101;
-	padding-right: 60px;
+	padding-right: 20px;
 	padding-top: 87px;
-	padding-left: 50px;
+	padding-left: 20px;
 	box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
 }
 
@@ -249,8 +249,8 @@ iframe用
 
 .menu_close_container {
 	position: absolute;
-	top: 30px;
-	right: 60px;
+	top: 16px;
+	right: 32px;
 	width: 18px;
 	height: 18px;
 	transform-origin: center center;
@@ -271,7 +271,7 @@ iframe用
 .menu_close div {
 	width: 100%;
 	height: 2px;
-	background: #244693;
+	background: #ffffff;
 	top: 8px;
 	-webkit-transition: all 200ms ease;
 	-moz-transition: all 200ms ease;
@@ -333,8 +333,8 @@ iframe用
 }
 
 .menu-svg {
-	background-image: url("../images/menu.svg");
-	background-color: rgb(201, 32, 32);
+	background-image: url("../images/btn-back.png");
+	
 	display: inline-block;
 	background-size: cover;
 	width: 38px;
