--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 html,
 body {
 	max-height: 100vh;
-	/* overflow-y: hidden; */
+	overflow-y: hidden;
 }
 .text-orange{
 	color: #fbceac;
@@ -111,6 +111,7 @@ iframe用
 	width: 100%;
 	height: 100%;
 	max-height: 100vh;
+	
 }
 
 /* 背景 */
